-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.2, Qt Creator 13.0.0-beta1
-
None
-
OS: Windows 10
Tested with Qt Creator 12.0.2 and Qt Creator 13 beta1-56
1) Qt Creator 13 beta1-56 (https://download.qt.io/snapshots/qtcreator/13.0/13.0.0-beta1/56/qt-creator-opensource-windows-x86_64-13.0.0-beta1_56.exe)
Product: Qt Creator 13.0.0-beta1 (12.0.82)
Based on: Qt 6.6.0 (MSVC 2019, x86_64)
Built on: Feb 13 2024 01:43:37
From revision: 844e005363
2) Qt Creator 12.0.2
Qt Creator 12.0.2
Based on Qt 6.6.0 (MSVC 2019, x86_64)
Built on Feb 6 2024 10:15:14
From revision a0bd498b31OS: Windows 10 Tested with Qt Creator 12.0.2 and Qt Creator 13 beta1-56 1) Qt Creator 13 beta1-56 ( https://download.qt.io/snapshots/qtcreator/13.0/13.0.0-beta1/56/qt-creator-opensource-windows-x86_64-13.0.0-beta1_56.exe ) Product: Qt Creator 13.0.0-beta1 (12.0.82) Based on: Qt 6.6.0 (MSVC 2019, x86_64) Built on: Feb 13 2024 01:43:37 From revision: 844e005363 2) Qt Creator 12.0.2 Qt Creator 12.0.2 Based on Qt 6.6.0 (MSVC 2019, x86_64) Built on Feb 6 2024 10:15:14 From revision a0bd498b31
-
-
2484b50a9 (13.0)
Full Screen menu item is not shown as checked when the Qt Creator window is in full screen
Steps:
- Open Qt Creator
- Select Windows->Show Fullscreen
- Select Windows and observe 'Show Fullscreen' menu item
OBSERVED :
- When the window is shown full screen, the 'Show Fullscreen' optionis not checked

EXPECTED:
- When the window is shown full screen, the 'Show Fullscreen' option should be checked